fix: #7114 | fix requested changes (scrollbars of content and tabs)

--- a/apps/gauzy/src/app/@shared/employee/edit-employee-membership-form/edit-employee-membership-form.component.scss
+++ b/apps/gauzy/src/app/@shared/employee/edit-employee-membership-form/edit-employee-membership-form.component.scss
@@ -24,9 +24,7 @@
   height: 100%;
   @include dialog(var(--gauzy-card-2), var(--gauzy-card-1));
 
-  nb-card-body {
-      background-color: var(--card-background-color);
+  nb-card {
       margin: 1rem;
-      border-radius: 0.625rem;
   }
 }
