--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-employment/edit-employee-employment.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-employment/edit-employee-employment.component.scss
@@ -30,5 +30,9 @@ $radius: nb-theme(border-radius);
   nb-card-body {
     background-color: var(--gauzy-sidebar-background-2);
     border-radius: var(--border-radius);
+
+    form {
+      margin-bottom: 1.6rem;
+    }
   }
 }
