--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-profile.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-profile.component.scss
@@ -2,5 +2,24 @@
     ::ng-deep .tabset-container .route-tabset {
         overflow-x: scroll;
         overflow-y: hidden;
+
+        &::-webkit-scrollbar {
+            /* Chrome, Safari, Opera */
+            display: none;
+            /* IE, Edge */
+            -ms-overflow-style: none;
+            /* Firefox */
+            scrollbar-width: none;
+        }
+
+        @media only screen and (max-width: 1280px) {
+            li a.tab-link {
+                display: flex !important;
+
+                nb-icon {
+                    margin-bottom: 0;
+                }
+            }
+        }
     }
 }
