--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee.component.scss
@@ -103,7 +103,7 @@
 
 :host {
   @include nb-card_overrides(
-    scroll,
+    hidden,
     calc($default-card-height + 3.5rem),
     $default-radius
   );
